DataG Payload creator